tests/functional/lang/eval-fail/addDrvOutputDependencies-multi-elem-context.err.exp
error:
       … while calling the 'addDrvOutputDependencies' builtin
         at /pwd/lang/eval-fail/addDrvOutputDependencies-multi-elem-context.nix:25:1:
           24| in
           25| builtins.addDrvOutputDependencies combo-path
             | ^
           26|

       error: context of string '/nix/store/pg9yqs4yd85yhdm3f4i5dyaqp5jahrsz-fail.drv/nix/store/2dxd5frb715z451vbf7s8birlf3argbk-fail-2.drv' must have exactly one element, but has 2
